[tool.poetry]
name = "didactic-disco"
version = "0.1.1-alpha.8"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "disco"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.0"
ampel-interface = {version = "^0.8.0-alpha.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
